# ProjectionDemo

./: README.md
LinuxSink/: Accessory.cpp  Accessory.h  CMakeLists.txt  main.cpp
ProjectionDemo/app/: build.gradle  proguard-rules.pro
ProjectionDemo/app/src/androidTest/java/com/windriver/projectiondemo/: ApplicationTest.java
ProjectionDemo/app/src/main/: AndroidManifest.xml
ProjectionDemo/app/src/main/java/com/windriver/projectiondemo/: Cube.java  CubeRenderer.java  DemoPresentation.java  DemoProjection.java  MainActivity.java  Util.java
ProjectionDemo/app/src/main/res/values/: strings.xml
ProjectionDemo/app/src/main/res/xml/: accessory_filter.xml
ProjectionDemo/app/src/test/java/com/windriver/presentationtest/: ExampleUnitTest.java
ProjectionDemo/gradle/wrapper/: gradle-wrapper.properties
